# STELLA_N1_GAZEBO

./: Readme.md
stella_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
stella_description/: CMakeLists.txt  package.xml
stella_description/launch/: stella_urdf_navi.launch.py  stella_urdf_slam.launch.py  stella_xacro_navi.launch.py  stella_xacro_slam.launch.py
stella_description/meshes/bases/: STELLA_N1_caster.stl  STELLA_N1_wheel.stl  stella_body.stl  ydlidar_x4.STL
stella_description/rviz/: stella_urdf.rviz
stella_description/urdf/: stella_navi.gazebo.xacro  stella_navi.urdf  stella_navi.urdf.xacro  stella_slam.gazebo.xacro  stella_slam.urdf  stella_slam.urdf.xacro
stella_gazebo/: CMakeLists.txt  package.xml
stella_gazebo/launch/: spawn_stella.launch.py  spawn_stella_ros2.launch.py  spawn_stella_ros2_xacro.launch.py  spawn_stella_slam.launch.py  spawn_stella_slam_xacro.launch.py  start_world.launch.py
stella_gazebo/src/: imu_to_ahrs.cpp  odom_ahrs_fusion.cpp
stella_gazebo/worlds/: stella_empty.world
stella_navigation2/launch/: navigation2.launch.py
stella_navigation2/param/: stella.yaml
